--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,39 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Favicon básico -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Iconos para dispositivos Android -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="%PUBLIC_URL%/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="%PUBLIC_URL%/android-chrome-512x512.png"
+    />
+
+    <!-- Icono para Apple Touch -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <!-- Archivo de configuración para navegadores -->
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     <title>Mi Turno Web</title>
   </head>
   <body>
